revert build